# gustomizer

./: meson.build
src/: main.cpp  meson.build
src/gui/: gustomizer.gresources.xml  window.ui
